<resources>
    <string name="app_name">Hello Market</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="you_have_an_account">you have an account?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="create_your_account">Create your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_data">No Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_this_location">Choose this location</string>
    <string name="set_address">Set Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password_desc">Create your new password for Tassy so you can login to your account</string>
    <string name="save_profile">Save Profile</string>
    <string name="order">Order</string>
</resources>